# LotteryOptimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
lottery_optimizer/app/: config.py  load_config.py  main.py
lottery_optimizer/core/: draw.py  evaluator.py  fitness.py  game.py  history.py  lottery_rules.py  numberset.py  objective.py  population.py
lottery_optimizer/engine/: benchmark.py  pipeline.py  ranking.py  reduction_engine.py
lottery_optimizer/export/: base_exporter.py  csv_exporter.py
lottery_optimizer/lotteries/: dupla_sena.py  lotofacil.py  lotomania.py  mega_sena.py  quina.py  reducao.py  timemania.py
lottery_optimizer/reduction/: __init__.py  candidate_list.py  combination_space.py  coverage.py  coverage_index.py  coverage_target.py  cpsat_cover.py  game_index.py  (+8 more)
tests/: test_annealing.py  test_base_exporter.py  test_benchmark.py  test_candidate_list.py  test_combination_space.py  test_coverage.py  test_coverage_index.py  test_coverage_target.py  test_coverage_validator.py  test_cpsat.py  test_cpsat_cover.py  test_csv_exporter.py  test_draw.py  test_evaluator.py  test_fitness.py  test_game.py  test_game_index.py  test_generator.py  test_genetic.py  test_genetic_cover.py  test_grasp.py  test_grasp_cover.py  test_greedy.py  test_greedy_cover.py  test_hill.py  test_hill_cover.py  test_history.py  test_lns.py  test_load_config.py  test_lottery_rules.py  test_main.py  test_memetic.py  test_memetic_cover.py  test_numberset.py  test_objective.py  test_optimizer.py  test_pipeline.py  test_population.py  test_ranking.py  test_reducer.py  (+6 more)
(+3 files in other folders)
